--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httpx>=0.24.0
 # Configuration
 # ===========================================
 pydantic-settings>=2.0.0
+email-validator>=2.0.0
 
 # ===========================================
 # XSLT 2.0/3.0 support
