Fix: Use PORT environment variable in Docker CMD
- Change from hardcoded 8000 to ${PORT:-8000}
- Cloud Run requires listening on PORT env var (8080)
- Defaults to 8000 for local development

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -72,9 +72,10 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 
 # Run the application
 # Using uvicorn with production settings
-CMD ["python", "-m", "uvicorn", "app.main:app", \
-    "--host", "0.0.0.0", \
-    "--port", "8000", \
-    "--workers", "2", \
-    "--proxy-headers", \
-    "--forwarded-allow-ips", "*"]
+# Cloud Run sets PORT environment variable, default to 8000 for local
+CMD python -m uvicorn app.main:app \
+    --host 0.0.0.0 \
+    --port ${PORT:-8000} \
+    --workers 2 \
+    --proxy-headers \
+    --forwarded-allow-ips "*"
