feat: Implement infrastructure improvements and git workflow
- Implement feature → develop → master branching strategy
- Deploy staging service (mappino-api-staging) for develop branch
- Update GitHub Actions workflows for staging/production deployments
- Create CONTRIBUTING.md with complete workflow guide
- Update PROJECT_STATUS.md with deployment workflow
- Update README.md with branching and deployment sections
- Update .gitignore to track workflow documentation
- Delete obsolete docs/NEXT_STEPS.md

Staging: https://mappino-api-staging-428522622484.us-central1.run.app
Production: https://mappino-api-sppjwo3eyq-uc.a.run.app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ name: Deploy to Cloud Run
 
 on:
   push:
-    branches: [main, master]
+    branches: [master, develop]
     paths:
       - "backend/**"
       - ".github/workflows/deploy.yml"
@@ -30,8 +30,8 @@ on:
           - production
 
 env:
-  SERVICE_NAME: mappino-api
-  DOCKER_IMAGE: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/mappino-api/mappino-api
+  SERVICE_NAME: ${{ github.ref == 'refs/heads/master' && 'mappino-api' || 'mappino-api-staging' }}
+  DOCKER_IMAGE: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/mappino-api/${{ github.ref == 'refs/heads/master' && 'mappino-api' || 'mappino-api-staging' }}
 
 jobs:
   # ===========================================
